examples/test/testpolicy19058.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19058
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key39: value22
      key8: value17
      key16: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value45
          key41: value30
          key29: value25
